# esp32c3_count_down

./: CMakeLists.txt  gdbinit  partitions.csv  sdkconfig  sdkconfig.old
components/lvgl_esp32_drivers/: lvgl_helpers.c  lvgl_helpers.h
components/lvgl_esp32_drivers/lvgl_i2c/: i2c_manager.h
components/lvgl_esp32_drivers/lvgl_tft/: disp_spi.h  st7789.c
main/: CMakeLists.txt  blufi_example_main.c  bsp_gpio.c  bsp_gpio.h  dht11.c  dht11.h  hello_task.c  hello_task.h  main.c  mqtt.c  mqtt.h  mqtt1.txt  mqtth.txt  ui.c  ui.h  ui_events.h  ui_helpers.c  ui_helpers.h
main/components/: ui_comp.c  ui_comp.h  ui_comp_hook.c  ui_comp_hook.h  ui_comp_panel2.c  ui_comp_panel2.h
main/components/EC11/: encoder.c  key.c
main/components/EC11/include/: encoder.h  key.h
main/components/bsp_gpio/: bsp_gpio.c
main/components/bsp_gpio/include/: bsp_gpio.h
main/components/hello_task/: hello_task.c
main/components/t_h/: aht20.c  dht11.c
main/components/t_h/include/: aht20.h  dht11.h
main/esp_gui/: gui_task.c  gui_task.h
main/fonts/: ui_font_Font16.c  ui_font_Font16S.c  ui_font_Number.c  ui_font_stxhei16.c
main/images/: ui_img_album_png.c  ui_img_avatar_png.c  ui_img_backward_png.c  ui_img_chatbox2_png.c  ui_img_chatbox_png.c  ui_img_clock_hour_png.c  ui_img_clock_min_png.c  ui_img_clock_sec_png.c  ui_img_cloud_png.c  ui_img_forward_png.c  ui_img_logo01_png.c  ui_img_pattern_png.c  ui_img_phone_png.c  ui_img_play_png.c  ui_img_star1_png.c  ui_img_star_png.c  ui_img_weather_1_png.c  ui_img_weather_2_png.c  ui_img_weather_3_png.c
main/screens/: ui_Screen1.c  ui_Screen2.c
(+12 files in other folders)
